--- a/index.html
+++ b/index.html
@@ -43,51 +43,51 @@
         <div class="wrap">
         <header>
             <div class="head_wrap">
-            <nav>
-                <!-- menu_responsive -->
-                <div class="menu">
-                <img src="./images/icon_menu.png" alt="메뉴" />
+                <nav>
+                    <!-- menu_responsive -->
+                    <div class="menu">
+                        <img src="./images/icon_menu.png" alt="메뉴" />
+                    </div>
+                    <ul class="gnb">
+                        <li><a href="#">Granhand</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Journal</a></li>
+                        <li><a href="#">Wallpaper</a></li>
+                        <li><a href="#">Stores</a></li>
+                        <li><a href="#">Index</a></li>
+                    </ul>
+                </nav>
+                <div class="logo">
+                    <h1>
+                        <a href="#"><img src="./images/logo_w.png" alt="그랑핸드" /></a>
+                    </h1>
                 </div>
-                <ul class="gnb">
-                <li><a href="#">Granhand</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Journal</a></li>
-                <li><a href="#">Wallpaper</a></li>
-                <li><a href="#">Stores</a></li>
-                <li><a href="#">Index</a></li>
-                </ul>
-            </nav>
-            <div class="logo">
-                <h1>
-                <a href="#"><img src="./images/logo_w.png" alt="그랑핸드" /></a>
-                </h1>
-            </div>
-            <div class="right_wrap">
-                <a href="#" class="search"
-                ><img src="./images/icon_search.png" alt="검색하기"
-                /></a>
-                <a href="#" class="mypage"
-                ><img src="./images/icon_my.png" alt="마이페이지"
-                /></a>
-                <a href="#" class="cart"
-                ><img src="./images/icon_cart.png" alt="장바구니"
-                /></a>
-                <div class="lang_wrap">
-                <button type="button" id="lang_btn">
-                    <img src="./images/icon_lang.png" alt="언어 설정" /><img
-                    src="./images/icon_lang_down.png"
-                    alt="언어 설정 열기"
-                    class="lang_arrow"
-                    />
-                </button>
-                <div class="lang_select">
-                    <a href="#" class="kr">한국어</a>
-                    <a href="#" class="en">English</a>
-                    <a href="#" class="ch">Chinese</a>
-                    <a href="#" class="jp">Japanese</a>
+                <div class="right_wrap">
+                    <a href="#" class="search"
+                    ><img src="./images/icon_search.png" alt="검색하기"
+                    /></a>
+                    <a href="#" class="mypage"
+                    ><img src="./images/icon_my.png" alt="마이페이지"
+                    /></a>
+                    <a href="#" class="cart"
+                    ><img src="./images/icon_cart.png" alt="장바구니"
+                    /></a>
+                    <div class="lang_wrap">
+                        <button type="button" id="lang_btn">
+                            <img src="./images/icon_lang.png" alt="언어 설정" /><img
+                            src="./images/icon_lang_down.png"
+                            alt="언어 설정 열기"
+                            class="lang_arrow"
+                            />
+                        </button>
+                        <div class="lang_select">
+                            <a href="#" class="kr">한국어</a>
+                            <a href="#" class="en">English</a>
+                            <a href="#" class="ch">Chinese</a>
+                            <a href="#" class="jp">Japanese</a>
+                        </div>
+                    </div>
                 </div>
-                </div>
-            </div>
             </div>
         </header>
         <main>
@@ -652,50 +652,77 @@
             <!-- 배경 글씨 -->
             <div class="store_wrap">
                 <div class="store_container">
-                <div class="list">
-                    <div class="store_list">
-                    <h3>GRANHAND. STORES</h3>
-                    <p>
-                        <a href="#">Seogyo</a>
-                        <a href="#">Gwanghwamun</a>
-                    </p>
-                    <p>
-                        <a href="#">Dosan</a>
-                        <a href="#">Namsan</a>
-                        <a href="#">Mapo</a>
-                    </p>
-                    <p>
-                        <a href="#">Seochon</a>
-                        <a href="#">Sogyeok</a>
-                    </p>
+                    <div class="list">
+                        <div class="store_list">
+                            <h3>GRANHAND. STORES</h3>
+                            <p>
+                                <a href="#">Seogyo</a>
+                                <a href="#">Gwanghwamun</a>
+                            </p>
+                            <p>
+                                <a href="#">Dosan</a>
+                                <a href="#">Namsan</a>
+                                <a href="#">Mapo</a>
+                            </p>
+                            <p>
+                                <a href="#">Seochon</a>
+                                <a href="#">Sogyeok</a>
+                            </p>
+                        </div>
+                        <div class="coffee_list">
+                            <h3>Komfortable COFFEE</h3>
+                            <p>
+                                <a href="#">Seogyo</a>
+                                <a href="#">Gwanghwamun</a>
+                            </p>
+                            <p>
+                                <a href="#">City Hall</a>
+                                <a href="#">Namsan</a>
+                                <a href="#">Anguk</a>
+                            </p>
+                        </div>
                     </div>
-                    <div class="coffee_list">
-                    <h3>Komfortable COFFEE</h3>
-                    <p>
-                        <a href="#">Seogyo</a>
-                        <a href="#">Gwanghwamun</a>
-                    </p>
-                    <p>
-                        <a href="#">City Hall</a>
-                        <a href="#">Namsan</a>
-                        <a href="#">Anguk</a>
-                    </p>
+                    <div class="store_pic_wrap">
+                        <div class="store_gnb">
+                            <a href="#" >Granhand</a>
+                            <a href="#">Shop</a>
+                            <a href="#">Journal</a>
+                            <a href="#">Wallpaper</a>
+                            <a href="#" class="current">Stores.</a>
+                            <a href="#">Index.</a>
+                        </div>
+                        <div class="store_pic">
+                            <div class="left_pic">
+                                <img src="./images/store/img_store002.jpg" alt="">
+                                <img src="./images/store/img_store004.jpg" alt="">
+                                <img src="./images/store/img_store006.jpg" alt="">
+                                <img src="./images/store/img_store008.jpg" alt="">
+                                <img src="./images/store/img_store010.jpg" alt="">
+                                <img src="./images/store/img_store012.jpg" alt="">
+                                <img src="./images/store/img_store014.jpg" alt="">
+                                <img src="./images/store/img_store016.jpg" alt="">
+                                <img src="./images/store/img_store018.jpg" alt="">
+                                <img src="./images/store/img_store020.jpg" alt="">
+                            </div>
+                            <div class="right_pic">
+                                <img src="./images/store/img_store001.jpg" alt="">
+                                <img src="./images/store/img_store003.jpg" alt="">
+                                <img src="./images/store/img_store005.jpg" alt="">
+                                <img src="./images/store/img_store007.jpg" alt="">
+                                <img src="./images/store/img_store009.jpg" alt="">
+                                <img src="./images/store/img_store011.jpg" alt="">
+                                <img src="./images/store/img_store013.jpg" alt="">
+                                <img src="./images/store/img_store015.jpg" alt="">
+                                <img src="./images/store/img_store017.jpg" alt="">
+                                <img src="./images/store/img_store019.jpg" alt="">
+                                <img src="./images/store/img_store021.jpg" alt="">
+                                <img src="./images/store/img_store022.jpg" alt="">
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="store_pic_wrap">
-                    <div class="store_gnb">
-                    <a href="#">Granhand</a>
-                    <a href="#">Shop</a>
-                    <a href="#">Journal</a>
-                    <a href="#">Wallpaper</a>
-                    <a href="#" class="current">Stores.</a>
-                    <a href="#">Index.</a>
-                    </div>
-                    <div class="store_pic"></div>
-                </div>
                 </div>
                 <button type="button" class="more_store">
-                <img src="" alt="" />
+                    <img src="./images/icon_bnr_down.png" alt="" />
                 </button>
             </div>
             </section>
