--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="./styles/font.css" />
         <link rel="stylesheet" href="./styles/common.css" />
         <link rel="stylesheet" href="./styles/index.css" />
-        <link rel="stylesheet" href="./styles/responsive.css" />
+        <!-- <link rel="stylesheet" href="./styles/responsive.css" /> -->
         <!-- Swiper -->
         <!--플러그인 필수 css cdn 연결-->
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
