index 필터링 작업

--- a/index.html
+++ b/index.html
@@ -732,8 +732,8 @@
                 <section class="index">
                 <div class="index_wrap">
                     <ul class="index_filter">
-                    <li><a href="#" class="all">All</a></li>
-                    <li class="index_act"><a href="#" class="sig">Signature</a></li>
+                    <li class="index_act"><a href="#" class="all">All</a></li>
+                    <li><a href="#" class="sig">Signature</a></li>
                     <li><a href="#" class="per">Perfume</a></li>
                     <li><a href="#" class="frag">Fragrances</a></li>
                     <li><a href="#" class="nat">Natural</a></li>
@@ -741,61 +741,193 @@
                     <div class="index_contents swiper">
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide slide1">
-                        <a href="#">
-                            <h2>Marne.</h2>
-                            <h3>마르네</h3>
-                            <p class="perfume_note">
-                            Orange, Sage, Pine, Woody,<br />Patchouli, Musk, MosS
-                            </p>
-                            <p>
-                            도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선,
-                            빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는
-                            기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고
-                            싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게
-                            걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이
-                            저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의
-                            아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던
-                            일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게
-                            저려온다.
-                            </p>
-                        </a>
+                        <div class="swiper-slide signature slide1">
+                            <a href="#">
+                                <h2>Marne.</h2>
+                                <h3>마르네</h3>
+                                <p class="perfume_note">
+                                Orange, Sage, Pine, Woody,<br />Patchouli, Musk, MosS
+                                </p>
+                                <p>
+                                도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선,
+                                빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는
+                                기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고
+                                싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게
+                                걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이
+                                저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의
+                                아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던
+                                일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게
+                                저려온다.
+                                </p>
+                            </a>
                         </div>
-                        <div class="swiper-slide slide2">
-                        <a href="#">
-                            <h2>Sopni.</h2>
-                            <h3>솝니</h3>
-                            <p class="perfume_note">
-                            Myrrh, Cedarwood, Frankincense,<br />Sandalwood, Pepper,
-                            Musk
-                            </p>
-                            <p>
-                            자다 깨 나온 거실에는 느릿하게 점멸하는 트리 아래 나
-                            때문에 잠이 깬 토토가 부스스한 눈으로 나를 올려다본다.
-                            카펫에 자리를 잡고 눕자 내 품 안에 들어와 털썩 쓰러진다.
-                            복슬복슬한 털을 쓰다듬는다. 불 꺼진 벽난로에서는 이따금
-                            틱틱 거리는 소리가 난다. 눈을 감고 소리에 집중하다 배 위에
-                            멈춘 손에서 작은 움직임이 느껴진다.
-                            </p>
-                        </a>
+                        <div class="swiper-slide signature slide2">
+                            <a href="#">
+                                <h2>Sopni.</h2>
+                                <h3>솝니</h3>
+                                <p class="perfume_note">
+                                Myrrh, Cedarwood, Frankincense,<br />Sandalwood, Pepper,
+                                Musk
+                                </p>
+                                <p>
+                                자다 깨 나온 거실에는 느릿하게 점멸하는 트리 아래 나
+                                때문에 잠이 깬 토토가 부스스한 눈으로 나를 올려다본다.
+                                카펫에 자리를 잡고 눕자 내 품 안에 들어와 털썩 쓰러진다.
+                                복슬복슬한 털을 쓰다듬는다. 불 꺼진 벽난로에서는 이따금
+                                틱틱 거리는 소리가 난다. 눈을 감고 소리에 집중하다 배 위에
+                                멈춘 손에서 작은 움직임이 느껴진다.
+                                </p>
+                            </a>
                         </div>
-                        <div class="swiper-slide slide3">
-                        <a href="#">
-                            <h2>Cask.</h2>
-                            <h3>캐스크</h3>
-                            <p class="perfume_note">
-                            Bergamot, Patchouli, SandalWood,<br />Oakmoss, Peru
-                            balsam, Vanilla
-                            </p>
-                            <p>
-                            모임의 분위기가 무르익을 때쯤 자리를 피해 복도에서 담배를
-                            태운다. 빈방을 찾아 가죽 소파에 파묻히듯 앉는다. 눈을 뜨니
-                            테이블 맞은편에 누군가 앉아있다. 그녀는 무표정한 얼굴로
-                            말없이 잔을 건넸고 나는 한 번에 들이킨다. 목이 타들어 가는
-                            느낌에 두 눈을 질끈 감는다. 다시 눈을 뜨니 아침. 대놓고
-                            비웃던 그녀의 낮은 웃음소리는 꽤 근사했다.
-                            </p>
-                        </a>
+                        <div class="swiper-slide signature slide3">
+                            <a href="#">
+                                <h2>Cask.</h2>
+                                <h3>캐스크</h3>
+                                <p class="perfume_note">
+                                Bergamot, Patchouli, SandalWood,<br />Oakmoss, Peru
+                                balsam, Vanilla
+                                </p>
+                                <p>
+                                모임의 분위기가 무르익을 때쯤 자리를 피해 복도에서 담배를
+                                태운다. 빈방을 찾아 가죽 소파에 파묻히듯 앉는다. 눈을 뜨니
+                                테이블 맞은편에 누군가 앉아있다. 그녀는 무표정한 얼굴로
+                                말없이 잔을 건넸고 나는 한 번에 들이킨다. 목이 타들어 가는
+                                느낌에 두 눈을 질끈 감는다. 다시 눈을 뜨니 아침. 대놓고
+                                비웃던 그녀의 낮은 웃음소리는 꽤 근사했다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide signature slide4">
+                            <a href="#">
+                                <h2>Weimer.</h2>
+                                <h3>바이마르</h3>
+                                <p class="perfume_note">
+                                Marine, Jasmine, Geranium,<br />Cedarwood, Amber, Melon
+                                </p>
+                                <p>
+                                비슷한 옷차림과 취향, 도돌이표처럼 반복되는 대화들. 영화 속 존 말코비치처럼 똑같은 얼굴들로 가득 찬 연회장에서 현기증을 느낄 때쯤, 저 멀리 사람들 사이에서 그를 발견했다. 주변에 있는 사람들은 그의 존재감을 지우려는 듯 더 크게 웃었다. 강한 끌림과 미묘한 두려움을 동시에 느끼는 순간 그와 눈이 마주쳤고, 나는 등을 돌려 타인과의 의미 없는 대화에 힙겹게 집중했다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide signature slide5">
+                            <a href="#">
+                                <h2>Modle.</h2>
+                                <h3>모들</h3>
+                                <p class="perfume_note">
+                                Bergamot, Juniper, Grapefruit, Mint,<br />Patchouli, Neroli, Frankincense
+                                </p>
+                                <p>
+                                이른 아침부터 한바탕 비에 젖은 공원은 갑자기 나타난 햇살로 숨죽이며 반짝거린다. 한 달에 하루, 이곳에서 함께한 그 사람과의 인연은 그리 길지 못했지만, 이제는 그것과 상관없이 정해진 날짜에 여기에 오는 것이 나만의 작은 취미가 되었다. 정자에 앉아 바라본 공원은 저 멀리 강 맞은편의 높은 빌딩 숲으로 물러난 비구름과 대비되어 아침인지 노란 해 질 녘인지 분간하기 어렵다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide signature slide6">
+                            <a href="#">
+                                <h2>Soie.</h2>
+                                <h3>수아</h3>
+                                <p class="perfume_note">
+                                Anise, Pink Grapefruit, Neroli, Rose,<br />Jasmine, Lemongrass, Agarwood, Patchouli
+                                </p>
+                                <p>
+                                이름이 호명되자 박수와 환호 사이에서 내 옆에 앉아있던 사람이 천천히 일어났다. 생각보다 앳된 얼굴의 그녀는 우아한 미소로 주변을 향해 고개를 숙여 화답했다. 단상을 향한 걸음은 절제되었지만 당당했고, 차분한 목소리는 결핍을 모르는 듯했다. 그녀가 입은 옷은 세상에서 가장 좋은 갑주처럼 보였다. 다시 돌아온 그녀는 나를 향해 생긋 미소 지으며 너무 떨렸다는 말과 함께 자리에 앉았다. 날 알지도 못하면서.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide perfume slide7">
+                            <a href="#">
+                                <h2>Noll.</h2>
+                                <h3>놀</h3>
+                                <p class="perfume_note">
+                                <em>TOP.</em> Lemon, Bergamot, GrapeFruit, Coconut<br /><em>MIDDLE.</em> Jasmine, Rose, Green-note, Tea tree, Eucalyptus<br><em>BASE.</em> Amber, Musk
+                                </p>
+                                <p>
+                                짐 정리를 마칠 때 쯤, 어느새 노란 햇살은 낯선 새 집의 안쪽 부엌까지 이미 들어와있었다. 선물로 받은 홍차와 다기를 꺼내 테라스에 펼쳐둔다. 찻잔에 따를수록 노을빛으로 진해지는 색을 멍하니 바라보다 퍼뜩 생각이 난 듯 주방으로 달려간다. 냉장고에 있는 레몬을 꺼내 얇게 썰어 식기 전에 찻잔에 퐁당 빠뜨린다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide perfume slide8">
+                            <a href="#">
+                                <h2>Munaki.</h2>
+                                <h3>무나키</h3>
+                                <p class="perfume_note">
+                                <em>TOP.</em> Lemon, Orange, Coconut<br /><em>MIDDLE.</em> Pine, Rose, Muguet, Nutmeg, Thyme,Green-note<br><em>BASE.</em> Amber, Musk, Cedarwood, Sandalwood
+                                </p>
+                                <p>
+                                지하로 내려가자 건물 뒤편의 숲과 연결되는 넓은 작업실이 나왔다. 여기저기 쌓여있는 목재 부스러기들과 미처 작품이 되지 못한 나무들. 공간은 오직 단 한 사람의 손길이 나이테처럼 쌓였다. 숲으로 이어지는 큰 문을 열자 기다렸다는 듯 둘 사이를 비집으며 비바람이 들이쳤고 구석에서 졸고 있던 주인 잃은 시간들이 일어난다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide perfume slide9">
+                            <a href="#">
+                                <h2>Nube.</h2>
+                                <h3>누베</h3>
+                                <p class="perfume_note">
+                                <em>TOP.</em> Lemon, Apple, Peach<br /><em>MIDDLE.</em> Muguet(Lily of the Valley), Jasmine, Rose, Green-note, Aqua-note<br><em>BASE.</em> Musk, Amber, Cedarwood, Sandalwood, Vanilla
+                                </p>
+                                <p>
+                                한 번도 열어본 적 없던 서랍 안에선 스카프와 장신구, 각종 잡동사니 사이로 익숙한 분 냄새가 일었다. 코팅된 네잎클로버가 끼워진 오래된 수첩을 펴자 한 쪽에는 손으로 쓴 지인들의 이름과 전화번호가 적혀있었고, 그 옆에 높인 빛바랜 사진에는 양장에 하이힐을 신은 나와 꼭 닮은 젊은 여자가 활짝 웃고 있었다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide fragrances slide10">
+                            <a href="#">
+                                <h2>Susie Salmon.</h2>
+                                <h3>수지 살몬</h3>
+                                <p class="perfume_note">
+                                <em>TOP.</em> Lemon, Black Currant, Tangerine, Cut Grass<br /><em>MIDDLE.</em> Lily of the Valley, Jasmine, Rose, Freesia, Peach, Apricot, Apple<br><em>BASE.</em> Sandal Wood, Cedar, Amber, White Musk
+                                </p>
+                                <p>
+                                방금 사온 꽃다발의 포장을 뜯어내 반 정도 물이 담긴 투명한 병에 꽂는다. 꽃 한 다발에서 내어지는 생기가 테이블 주변으로 서서히 퍼져나간다. 냉장고에서 사과를 꺼내 한 입 베어 물고 다시금 꽃다발에 코를 가까이 댄다. 옅게 깔린 꽃내음 위로 올라오는 상큼함을 나는 느리게 삼켜낸다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide fragrances slide11">
+                            <a href="#">
+                                <h2>Marine Orchid.</h2>
+                                <h3>마린 오키드</h3>
+                                <p class="perfume_note">
+                                <em>TOP.</em> Mandarin, Pear, Lemon<br /><em>MIDDLE.</em> Rose, Lily of the valley, Orchid<br><em>BASE.</em> Musk, Toffee, Patchouli
+                                </p>
+                                <p>
+                                서핑보드에 앉아 두 다리를 흔들어 바다 표면을 흩뜨렸다. 자잘하게 햇빛이 반사되는 물결 사이로 어렴풋한 바닷속을 내려다본다. 방금 들어갔다 나왔는데도 밖에서 보는 바다는 깊이감이 없어 다시금 속이 궁금해진다. 서핑보드에서 내려오자 온몸으로 전해지는 차가움에 짧은 숨을 들이쉬고 바다 아래로 헤엄쳤다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide fragrances slide12">
+                            <a href="#">
+                                <h2>Kyujang.</h2>
+                                <h3>규장</h3>
+                                <p class="perfume_note">
+                                <em>TOP.</em> Fig Leaf, Bergamot, Pink Pepper<br /><em>MIDDLE.</em> Cinnamon, Thyme, Geranium<br><em>BASE.</em> Woody, Fig, Eucalyptus
+                                </p>
+                                <p>
+                                이따금씩 찾아가는 도서관 구석에는 유달리 짙은 고동색 책장이 있다. 낡은 책장에는 그에 어울리는 서적들이 꽂혀있다. 색이 바랜 책표지로 감싸진 책들 중 가장 마음에 드는 한 권을 골라 펼쳐본다. 종이를 넘길 때마다 맡아지는 옅은 내음이 좋아 나는 다시 책을 덮고 첫 페이지부터 마지막까지 연속으로 넘긴다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide natural slide13">
+                            <a href="#">
+                                <h2>Aube.</h2>
+                                <h3>오브</h3>
+                                <p class="perfume_note">
+                                Bergamot, Lime, Juniperberry
+                                </p>
+                                <p>
+                                앨리스가 된 기분으로 문을 열고 나가니 아직은 새벽 어스름, 지평선에 머무는 햇살이 가늘게 정원을 비추자 온갖 풀과 꽃, 열매의 향을 잔뜩 머금고 있던 이슬이 진한 내음만 남긴 채 반짝이며 조용히 사라지고 있었다. 인위적이지만 사람의 흔적은 느껴지지 않는 이 정원은 방치된 듯 나름의 조화를 이루고 있다.
+                                </p>
+                            </a>
+                        </div>
+                        <div class="swiper-slide natural slide14">
+                            <a href="#">
+                                <h2>Rinko.</h2>
+                                <h3>린코</h3>
+                                <p class="perfume_note">
+                                Spearmint, Clarysage, Petitgrain
+                                </p>
+                                <p>
+                                그 집은 하나의 큰 분재처럼 완벽에 가까운 작품이자 살아있는 무언가였다. 건드릴 수 없는 예민함과 완벽함으로 가득찬 그 공간은 그가 내려준 허브티의 향으로 채워졌고 나는 테이블 위의 작은 분재보다 더 작아져 그의 숲을 거닐었다. 그가 바라보는 세상은 어떤 풍경인지 궁금해졌다.
+                                </p>
+                            </a>
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
